@@ -1,0 +1,9 @@
+Testname: debian-readme-general
+Sequence: 6000
+Version: 1.0
+Description: General tests for README.Debian
+Test-For:
+ readme-debian-contains-debmake-default-email-address
+ readme-debian-mentions-usr-doc
+ spelling-error-in-readme-debian
+References: Debian Bug#556456
